bulk add hotel added
